# llvm-rx

./: .gitignore  README.md  RX.md
RX/: LLVMBuild.txt  RX.h  RX.td  RXCallingConv.td  RXFrameLowering.cpp  RXFrameLowering.h  RXISelDAGToDAG.cpp  RXISelLowering.cpp  RXISelLowering.h  RXInstrFormats.td  RXInstrInfo.cpp  RXInstrInfo.td  RXMCInstLower.cpp  RXRegisterInfo.cpp  RXRegisterInfo.h  RXRegisterInfo.td  RXSubtarget.h  RXTargetMachine.h  RXTargetObjectFile.cpp  RXTargetObjectFile.h
RX/MCTargetDesc/: RXInstPrinter.h  RXMCAsmInfo.cpp  RXMCAsmInfo.h  RXMCTargetDesc.cpp
RX/TargetInfo/: CMakeLists.txt
clang/: clang.patch
clang/Targets/: RX.cpp  (+1 more)
llvm/: NOTE_LLVM_BACKEND.md  RXInst.md  llvm.patch
llvm/RX/: CMakeLists.txt  RX.h  RX.td  RXAsmPrinter.cpp  RXCallingConv.td  RXExpandPseudoInsts.cpp  RXFrameLowering.cpp  RXFrameLowering.h  RXISelDAGToDAG.cpp  RXISelLowering.cpp  RXISelLowering.h  RXInstrFormats.td  RXInstrInfo.cpp  RXInstrInfo.h  RXInstrInfo.td  RXMCInstLower.cpp  RXMachineFunctionInfo.h  RXRegisterInfo.cpp  RXRegisterInfo.td  RXSubtarget.cpp  RXSubtarget.h  RXTargetMachine.cpp  RXTargetObjectFile.h
llvm/RX/MCTargetDesc/: CMakeLists.txt  LLVMBuild.txt  RXAsmBackend.cpp  RXAsmBackend.h  RXELFObjectWriter.cpp  RXInstPrinter.cpp  RXInstPrinter.h  RXMCCodeEmitter.cpp  RXMCTargetDesc.cpp  RXMCTargetDesc.h  RXTargetStreamer.cpp  RXTargetStreamer.h
llvm/RX/TargetInfo/: CMakeLists.txt  LLVMBuild.txt  RXTargetInfo.cpp  RXTargetInfo.h
patches/: rx.patch
tests/: add_reg_reg.ll  arg1.ll  arg16.ll  arg8.ll  build_run.sh  call.ll  llc_all_s.sh  void_func.ll
(+61 files in other folders)
